Add solutions to day 2

--- a/2021.ipynb
+++ b/2021.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,6 +176,156 @@
    ],
    "source": [
     "day1_part2(final_report)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Day 2: Dive!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Part 1\n",
+    "\n",
+    "The submarine has a planned course consisting of a list of commands such as `forward 1`, `down 2`, or `up 3`. The horizontal position and depth both start at `0`. Calculate the horizontal position and depth you would have after following the planned course. What do you get if you multiply your final horizontal position by your final depth?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_course = [\"forward 5\", \"down 5\", \"forward 8\", \"up 3\", \"down 8\", \"forward 2\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "150"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def day2_part1(course: list[str]):\n",
+    "    # x: horizontal position, y: depth\n",
+    "    x = y = 0\n",
+    "    for cmd in course:\n",
+    "        d = int(cmd[-1])\n",
+    "        if cmd[0] == \"f\":\n",
+    "            x += d\n",
+    "        elif cmd[0] == \"d\":\n",
+    "            y += d\n",
+    "        else:\n",
+    "            y -= d\n",
+    "    return x * y\n",
+    "\n",
+    "day2_part1(test_course)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2150351"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final_course = file_to_list(\"input2.txt\")\n",
+    "day2_part1(final_course)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Part 2\n",
+    "\n",
+    "New interpretation of the commands:\n",
+    "\n",
+    "- `down X` increases your aim by X units.\n",
+    "- `up X` decreases your aim by X units.\n",
+    "- `forward X` does two things:\n",
+    "    - It increases your horizontal position by X units.\n",
+    "    - It increases your depth by your aim multiplied by X.\n",
+    "\n",
+    "Using this new interpretation of the commands, calculate the horizontal position and depth you would have after following the planned course. What do you get if you multiply your final horizontal position by your final depth?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "900"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def day2_part2(course: list[str]):\n",
+    "    # x: horizontal position, y: depth\n",
+    "    x = y = aim = 0\n",
+    "    for cmd in course:\n",
+    "        d = int(cmd[-1])\n",
+    "        if cmd[0] == \"f\":\n",
+    "            x += d\n",
+    "            y += aim * d\n",
+    "        elif cmd[0] == \"d\":\n",
+    "            aim += d\n",
+    "        else:\n",
+    "            aim -= d\n",
+    "    return x * y\n",
+    "\n",
+    "day2_part2(test_course)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1842742223"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "day2_part2(final_course)"
    ]
   }
  ],
