--- a/2021.ipynb
+++ b/2021.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,6 +326,159 @@
    ],
    "source": [
     "day2_part2(final_course)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Day 3: Binary Diagnostic\n",
+    "\n",
+    "### Part 1\n",
+    "\n",
+    "The puzzle input (a diagnostic report) consists of a list of binary numbers. You need to use the binary numbers in the diagnostic report to generate two new binary numbers (called the `gamma rate` and the `epsilon rate`). Each bit in the `gamma rate` can be determined by finding the most common bit in the corresponding position of all numbers in the diagnostic report. The `epsilon rate` is calculated in a similar way; rather than use the most common bit, the least common bit from each position is used.\n",
+    "\n",
+    "Use the binary numbers in your diagnostic report to calculate the `gamma rate` and `epsilon rate`, then multiply them together. What is the power consumption of the submarine? (Be sure to represent your answer in decimal, not binary.)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 174,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_report = [\"00100\", \"11110\", \"10110\", \"10111\", \"10101\", \"01111\", \"00111\", \"11100\", \"10000\", \"11001\", \"00010\", \"01010\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "198"
+      ]
+     },
+     "execution_count": 132,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def day3_part1(report: list[str]):\n",
+    "    gamma = \"\"\n",
+    "    for i in range(len(report[0])):\n",
+    "        n0 = 0\n",
+    "        for j in range(len(report)):\n",
+    "            if report[j][i] == \"0\":\n",
+    "                n0 += 1\n",
+    "        if n0 >= len(report) // 2:\n",
+    "            gamma += \"0\"\n",
+    "        else:\n",
+    "            gamma += \"1\"\n",
+    "    gamma = int(gamma, 2)\n",
+    "    epsilon = 2 ** len(report[0]) - 1 - gamma\n",
+    "    return gamma * epsilon\n",
+    "\n",
+    "day3_part1(test_report)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "841526"
+      ]
+     },
+     "execution_count": 133,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final_report = file_to_list(\"input3.txt\")\n",
+    "day3_part1(final_report)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Part 2\n",
+    "\n",
+    "Next, consider the `oxygen generator rating` and the `CO2 scrubber rating`. To find `oxygen generator rating`, determine the most common value (0 or 1) in the current bit position, and keep only numbers with that bit in that position. If 0 and 1 are equally common, keep values with a 1 in the position being considered. To find `CO2 scrubber rating`, determine the least common value (0 or 1) in the current bit position, and keep only numbers with that bit in that position. If 0 and 1 are equally common, keep values with a 0 in the position being considered.\n",
+    "\n",
+    "Use the binary numbers in your diagnostic report to calculate the `oxygen generator rating` and `CO2 scrubber rating`, then multiply them together. What is the life support rating of the submarine? (Be sure to represent your answer in decimal, not binary.)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 189,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "230"
+      ]
+     },
+     "execution_count": 189,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def day3_part2(report: list[str]):\n",
+    "    oxygen = c02 = report\n",
+    "    for i in range(len(oxygen[0])):\n",
+    "        if len(oxygen) > 1:\n",
+    "            n0 = 0\n",
+    "            for j in range(len(oxygen)):\n",
+    "                if oxygen[j][i] == \"0\":\n",
+    "                    n0 += 1\n",
+    "            most = \"1\"\n",
+    "            if n0 > len(oxygen) // 2:\n",
+    "                most = \"0\"\n",
+    "            oxygen = [o for o in oxygen if o[i] == most]\n",
+    "    for i in range(len(c02[0])):\n",
+    "        if len(c02) > 1:\n",
+    "            n0 = 0\n",
+    "            for j in range(len(c02)):\n",
+    "                if c02[j][i] == \"0\":\n",
+    "                    n0 += 1\n",
+    "            least = \"1\"\n",
+    "            if n0 <= len(c02) // 2:\n",
+    "                least = \"0\"\n",
+    "            c02 = [c for c in c02 if c[i] == least]\n",
+    "    return int(oxygen[0], 2) * int(c02[0], 2)\n",
+    "\n",
+    "day3_part2(test_report)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 190,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4790390"
+      ]
+     },
+     "execution_count": 190,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "day3_part2(final_report)"
    ]
   }
  ],
