--- a/2021.ipynb
+++ b/2021.ipynb
@@ -16,16 +16,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def file_to_list(filename, sep=\"\\n\") -> list:\n",
+    "import copy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def file_to_list(filename, sep=\"\\n\", maxsplit=-1) -> list:\n",
     "    \"\"\"\n",
     "    Read an input file and split it using sep as the delimiter.\n",
     "    \"\"\"\n",
     "    with open(filename) as f:\n",
-    "        return f.read().rstrip().split(sep)"
+    "        return f.read().rstrip().split(sep, maxsplit=maxsplit)"
    ]
   },
   {
@@ -46,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +73,7 @@
        "7"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +100,7 @@
        "1215"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +130,7 @@
        "8"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +151,7 @@
        "5"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +178,7 @@
        "1150"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +223,7 @@
        "150"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +256,7 @@
        "2150351"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -276,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +294,7 @@
        "900"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +328,7 @@
        "1842742223"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -343,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +370,7 @@
        "198"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -387,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +405,7 @@
        "841526"
       ]
      },
-     "execution_count": 133,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -419,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -428,7 +437,7 @@
        "230"
       ]
      },
-     "execution_count": 189,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -463,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -472,13 +481,187 @@
        "4790390"
       ]
      },
-     "execution_count": 190,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "day3_part2(final_report)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Day 4: Giant Squid\n",
+    "\n",
+    "### Part 1\n",
+    "\n",
+    "Play bingo with the giant squid that has attached itself to the submarine.\n",
+    "\n",
+    "Given a random sequence of numbers and random set of boards, find the winning board. If all numbers in any row or any column of a board are marked, that board wins. Find the sum of all unmarked numbers on the winning board and multiply that sum by the number that was just called when the board won."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_draw_numbers = [7,4,9,5,11,17,23,2,0,14,21,24,10,16,13,6,15,25,12,22,18,20,8,19,3,26,1]\n",
+    "test_boards = [[[22, 13, 17, 11, 0],\n",
+    "  [8, 2, 23, 4, 24],\n",
+    "  [21, 9, 14, 16, 7],\n",
+    "  [6, 10, 3, 18, 5],\n",
+    "  [1, 12, 20, 15, 19]],\n",
+    " [[3, 15, 0, 2, 22],\n",
+    "  [9, 18, 13, 17, 5],\n",
+    "  [19, 8, 7, 25, 23],\n",
+    "  [20, 11, 10, 24, 4],\n",
+    "  [14, 21, 16, 12, 6]],\n",
+    " [[14, 21, 17, 24, 4],\n",
+    "  [10, 16, 15, 9, 19],\n",
+    "  [18, 8, 23, 26, 20],\n",
+    "  [22, 11, 13, 6, 5],\n",
+    "  [2, 0, 12, 3, 7]]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4512\n"
+     ]
+    }
+   ],
+   "source": [
+    "def day4_part1(numbers: list[str], boards: list[list]):\n",
+    "    winner = None\n",
+    "    for number in numbers:\n",
+    "        for board in boards:\n",
+    "            # Mark the new number\n",
+    "            for i in range(5):\n",
+    "                h = v = 0\n",
+    "                for j in range(5):\n",
+    "                    if number == board[i][j]:\n",
+    "                        board[i][j] = -1\n",
+    "                    if board[i][j] == -1:\n",
+    "                        h += 1\n",
+    "                    if board[j][i] == -1:\n",
+    "                        v += 1\n",
+    "                # Check if the board has won\n",
+    "                if h == 5 or v == 5:\n",
+    "                    winner = board\n",
+    "                    break\n",
+    "            if winner:\n",
+    "                score = sum(sum(x for x in row if x != -1) for row in board)\n",
+    "                print(score * number)\n",
+    "                return\n",
+    "\n",
+    "day4_part1(copy.deepcopy(test_draw_numbers), copy.deepcopy(test_boards))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input4 = file_to_list(\"input4.txt\", \"\\n\\n\", 1)\n",
+    "final_draw_numbers = [int(n) for n in input4[0].split(\",\")]\n",
+    "final_boards = [x.split(\"\\n\") for x in input4[1].split(\"\\n\\n\")]\n",
+    "final_boards = [[[int(z) for z in y.split()] for y in x] for x in final_boards]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "27027\n"
+     ]
+    }
+   ],
+   "source": [
+    "day4_part1(copy.deepcopy(final_draw_numbers), copy.deepcopy(final_boards))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Part 2\n",
+    "\n",
+    "Let's try a different strategy: let the giant squid win.\n",
+    "\n",
+    "Figure out which board will win last. Once it wins, what would its final score be?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1924\n"
+     ]
+    }
+   ],
+   "source": [
+    "def day4_part2(numbers: list[str], boards: list[list]):\n",
+    "    for number in numbers:\n",
+    "        for b in reversed(range(len(boards))):\n",
+    "            won = False\n",
+    "            # Mark the new number\n",
+    "            for i in range(5):\n",
+    "                h = v = 0\n",
+    "                for j in range(5):\n",
+    "                    if number == boards[b][i][j]:\n",
+    "                        boards[b][i][j] = -1\n",
+    "                    if boards[b][i][j] == -1:\n",
+    "                        h += 1\n",
+    "                    if boards[b][j][i] == -1:\n",
+    "                        v += 1\n",
+    "                # Check if the board has won\n",
+    "                if h == 5 or v == 5:\n",
+    "                    won = True            \n",
+    "            if won == True:\n",
+    "                if len(boards) == 1:\n",
+    "                    score = sum(sum(x for x in row if x != -1) for row in boards[b])\n",
+    "                    print(score * number)\n",
+    "                boards.remove(boards[b])\n",
+    "\n",
+    "day4_part2(copy.deepcopy(test_draw_numbers), copy.deepcopy(test_boards))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "36975\n"
+     ]
+    }
+   ],
+   "source": [
+    "day4_part2(final_draw_numbers, final_boards)"
    ]
   }
  ],
