--- a/2021.ipynb
+++ b/2021.ipynb
@@ -16,16 +16,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import copy"
+    "import copy\n",
+    "import numpy as np\n",
+    "import re"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +75,7 @@
        "7"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -91,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +102,7 @@
        "1215"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 120,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +132,7 @@
        "8"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +153,7 @@
        "5"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 122,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +180,7 @@
        "1150"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +225,7 @@
        "150"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 125,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +258,7 @@
        "2150351"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 126,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -285,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +296,7 @@
        "900"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 127,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -319,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +330,7 @@
        "1842742223"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 128,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -352,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +372,7 @@
        "198"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 130,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -396,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
@@ -405,7 +407,7 @@
        "841526"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 131,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -428,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
@@ -437,7 +439,7 @@
        "230"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 132,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -472,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
@@ -481,7 +483,7 @@
        "4790390"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 133,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -505,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -529,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
@@ -569,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -581,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
@@ -609,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
@@ -649,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
@@ -662,6 +664,169 @@
    ],
    "source": [
     "day4_part2(final_draw_numbers, final_boards)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Day 5: Hydrothermal Venture\n",
+    "\n",
+    "### Part 1\n",
+    "\n",
+    "You come across a field of hydrothermal vents on the ocean floor!\n",
+    "\n",
+    "Hydrothermal vents tend to form lines that are horizontal, vertical or diagonal (45 degrees). The submarine generates a list of nearby lines of vents.\n",
+    "\n",
+    "For the first part, consider only horizontal and vertical lines. At how many points do at least two lines overlap?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_lines = [[0, 9, 5, 9],\n",
+    " [8, 0, 0, 8],\n",
+    " [9, 4, 3, 4],\n",
+    " [2, 2, 2, 1],\n",
+    " [7, 0, 7, 4],\n",
+    " [6, 4, 2, 0],\n",
+    " [0, 9, 2, 9],\n",
+    " [3, 4, 1, 4],\n",
+    " [0, 0, 8, 8],\n",
+    " [5, 5, 8, 2]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 141,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def day5_part1(coordinates:list[list]):\n",
+    "    # 2-D array\n",
+    "    array = np.zeros((1000, 1000))\n",
+    "    for x1, y1, x2, y2 in coordinates:\n",
+    "        # Horizontal lines (x1 = x2)\n",
+    "        if x1 == x2:\n",
+    "            array[x1, min(y1, y2):max(y1, y2) + 1] += 1\n",
+    "        # Vertical lines (y1 = y2)\n",
+    "        elif y1 == y2:\n",
+    "            array[min(x1, x2):max(x1, x2) + 1, y1] += 1\n",
+    "    return (array > 1).sum()\n",
+    "\n",
+    "day5_part1(test_lines)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final_lines = file_to_list(\"input5.txt\")\n",
+    "final_lines = [list(map(int, re.split(\",| -> \", line))) for line in final_lines]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5084"
+      ]
+     },
+     "execution_count": 143,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "day5_part1(final_lines)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Part 2\n",
+    "\n",
+    "For the second part, consider all of the lines. At how many points do at least two lines overlap?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12"
+      ]
+     },
+     "execution_count": 144,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def day5_part2(coordinates:list[list]):\n",
+    "    # 2-D array\n",
+    "    array = np.zeros((1000, 1000))\n",
+    "    for x1, y1, x2, y2 in coordinates:\n",
+    "        # Horizontal lines (x1 = x2)\n",
+    "        if x1 == x2:\n",
+    "            array[x1, min(y1, y2):max(y1, y2)+1] += 1\n",
+    "        # Vertical lines (y1 = y2)\n",
+    "        elif y1 == y2:\n",
+    "            array[min(x1, x2):max(x1, x2)+1, y1] += 1\n",
+    "        # Diagonal lines\n",
+    "        else:\n",
+    "            # range() evaluates to False if the sequence is not continuous\n",
+    "            xrange = range(x1, x2 + 1) or range(x1, x2 - 1, -1)\n",
+    "            yrange = range(y1, y2 + 1) or range(y1, y2 - 1, -1)\n",
+    "            for x, y in zip(xrange, yrange):\n",
+    "                array[x, y] += 1\n",
+    "    return (array > 1).sum()\n",
+    "\n",
+    "day5_part2(test_lines)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "17882"
+      ]
+     },
+     "execution_count": 145,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "day5_part2(final_lines)"
    ]
   }
  ],
