Add solution to day 6

--- a/2021.ipynb
+++ b/2021.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -827,6 +827,193 @@
    ],
    "source": [
     "day5_part2(final_lines)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Day 6: Lanternfish\n",
+    "\n",
+    "### Part 1\n",
+    "\n",
+    "Model the rate of growth of a school of lanternfish.\n",
+    "\n",
+    "Each fish can be modelled by a single number that represents the number of days until it creates a new lanternfish Each lanternfish creates a new lanternfish once every 7 days. A new lanternfish needs 2 more days for its first cycle.\n",
+    "\n",
+    "Find a way to simulate lanternfish. How many lanternfish would there be after 80 days?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 0 counts as a valid timer value\n",
+    "test_fishes = [3,4,3,1,2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5934"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def day6_part1(fishes: list[int], days: int):\n",
+    "    for _ in range(days):\n",
+    "        new = []\n",
+    "        for idx, fish in enumerate(fishes):\n",
+    "            if fish == 0:\n",
+    "                new.append(8)\n",
+    "                fishes[idx] = 6\n",
+    "            else:\n",
+    "                fishes[idx] -= 1\n",
+    "        fishes = fishes + new\n",
+    "    return len(fishes)\n",
+    "\n",
+    "day6_part1(copy.deepcopy(test_fishes), 80)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final_fishes = [int(fish) for fish in file_to_list(\"input6.txt\", \",\")]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "359999"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "day6_part1(copy.deepcopy(final_fishes), 80)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Part 2\n",
+    "\n",
+    "Suppose the lanternfish live forever and have unlimited food and space. Would they take over the entire ocean?\n",
+    "\n",
+    "How many lanternfish would there be after 256 days?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# The growth rate of lanternfish is exponential.\n",
+    "# Our solution to part 1 has therefore a space and time complexity of O(n^2),\n",
+    "# and is uncomputable with large parameters (e.g. days=256)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "26984457539"
+      ]
+     },
+     "execution_count": 114,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def day6_part2(fishes: list[int], days:int):\n",
+    "    \"\"\"\n",
+    "    Lanternfish growth model with a better space and time complexity.\n",
+    "    \"\"\"\n",
+    "    state = [0]*9\n",
+    "    for fish in fishes:\n",
+    "        state[fish] += 1\n",
+    "    for _ in range(days):\n",
+    "        new = state[0]\n",
+    "        state = state[1:] + [new]\n",
+    "        state[6] += new\n",
+    "    return sum(state)\n",
+    "\n",
+    "day6_part2(copy.deepcopy(test_fishes), 80)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1631647919273"
+      ]
+     },
+     "execution_count": 115,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "day6_part2(copy.deepcopy(final_fishes), 256)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "25769803776"
+      ]
+     },
+     "execution_count": 116,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def test(fishes: list[int], days:int):\n",
+    "    n = 0\n",
+    "    for fish in fishes:\n",
+    "        n += 2 * (1 + 1) ** int((days-fish+1)//8)\n",
+    "    return n\n",
+    "\n",
+    "test(copy.deepcopy(test_fishes), 256)"
    ]
   }
  ],
