Add solution to day 6

--- a/2021.ipynb
+++ b/2021.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +75,7 @@
        "7"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +102,7 @@
        "1215"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
        "8"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
        "5"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +180,7 @@
        "1150"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
        "150"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +258,7 @@
        "2150351"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +296,7 @@
        "900"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +330,7 @@
        "1842742223"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +372,7 @@
        "198"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -407,7 +407,7 @@
        "841526"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -439,7 +439,7 @@
        "230"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -474,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +483,7 @@
        "4790390"
       ]
      },
-     "execution_count": 133,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -531,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -571,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -583,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -611,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -651,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -683,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -701,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -710,7 +710,7 @@
        "5"
       ]
      },
-     "execution_count": 141,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -733,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -743,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -752,7 +752,7 @@
        "5084"
       ]
      },
-     "execution_count": 143,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -772,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -781,7 +781,7 @@
        "12"
       ]
      },
-     "execution_count": 144,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -811,7 +811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -820,13 +820,171 @@
        "17882"
       ]
      },
-     "execution_count": 145,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "day5_part2(final_lines)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Day 6: Lanternfish\n",
+    "\n",
+    "### Part 1\n",
+    "\n",
+    "Model the rate of growth of a school of lanternfish.\n",
+    "\n",
+    "Each fish can be modelled by a single number that represents the number of days until it creates a new lanternfish Each lanternfish creates a new lanternfish once every 7 days. A new lanternfish needs 2 more days for its first cycle.\n",
+    "\n",
+    "Find a way to simulate lanternfish. How many lanternfish would there be after 80 days?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 0 counts as a valid timer value\n",
+    "test_fishes = [3,4,3,1,2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5934"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def day6_part1(fishes: list[int], days: int):\n",
+    "    for _ in range(days):\n",
+    "        new = []\n",
+    "        for idx, fish in enumerate(fishes):\n",
+    "            if fish == 0:\n",
+    "                new.append(8)\n",
+    "                fishes[idx] = 6\n",
+    "            else:\n",
+    "                fishes[idx] -= 1\n",
+    "        fishes = fishes + new\n",
+    "    return len(fishes)\n",
+    "\n",
+    "day6_part1(copy.deepcopy(test_fishes), 80)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final_fishes = [int(fish) for fish in file_to_list(\"input6.txt\", \",\")]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "359999"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "day6_part1(copy.deepcopy(final_fishes), 80)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Part 2\n",
+    "\n",
+    "Suppose the lanternfish live forever and have unlimited food and space. Would they take over the entire ocean?\n",
+    "\n",
+    "How many lanternfish would there be after 256 days?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# The growth rate of lanternfish is exponential.\n",
+    "# Our solution to part 1 has therefore a space and time complexity of O(n^2),\n",
+    "# and is uncomputable with large parameters (e.g. days=256)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "26984457539"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def day6_part2(fishes: list[int], days:int):\n",
+    "    \"\"\"\n",
+    "    Lanternfish growth model with a better space and time complexity.\n",
+    "    \"\"\"\n",
+    "    state = [fishes.count(i) for i in range(9)]\n",
+    "    for _ in range(days):\n",
+    "        state = state[1:] + state[:1]\n",
+    "        state[6] += state[-1]\n",
+    "    return sum(state)\n",
+    "\n",
+    "day6_part2(copy.deepcopy(test_fishes), 256)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1631647919273"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "day6_part2(copy.deepcopy(final_fishes), 256)"
    ]
   }
  ],
