Add solution to day 7

--- a/2021.ipynb
+++ b/2021.ipynb
@@ -986,6 +986,152 @@
    "source": [
     "day6_part2(copy.deepcopy(final_fishes), 256)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Day 7: The Treachery of Whales\n",
+    "\n",
+    "### Part 1\n",
+    "\n",
+    "A giant whale is pursuing our submarine, but an army of crabs in their mini-submarines is coming to our rescue! By aligning on a same line, the crabs could blast a hole in the ocean floor and give us access to an underground cave system where we could take shelter from the whale.\n",
+    "\n",
+    "Crab submarines can only move horizontally. Each change of 1 step in horizontal position of a single crab costs 1 fuel. The puzzle input is the original horizontal positions of the crabs.\n",
+    "\n",
+    "Determine the horizontal position that the crabs can align to using the least fuel possible. How much fuel must they spend to align to that position?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_positions = [16,1,2,0,4,2,7,1,2,14]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "37"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def day7_part1(positions: list[int]):\n",
+    "    median = np.median(positions)\n",
+    "    return int(sum(abs(positions - median)))\n",
+    "\n",
+    "day7_part1(test_positions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final_positions = [int(p) for p in file_to_list(\"inputs/input7.txt\", sep=\",\")]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "352331"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "day7_part1(final_positions)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Part 2\n",
+    "\n",
+    "As it turns out, crab submarine engines don't burn fuel at a constant rate. Instead, each change of 1 step in horizontal position costs 1 more unit of fuel than the last: the first step costs 1, the second step costs 2, the third step costs 3, and so on.\n",
+    "\n",
+    "Determine the horizontal position that the crabs can align to using the least fuel possible so they can make you an escape route! How much fuel must they spend to align to that position?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "168"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def day7_part2(positions: list[int]):\n",
+    "    \"\"\"\n",
+    "    The optimal position is within 0,5 from the mean,\n",
+    "    so we take the mean, calculate the sum of the fuel costs\n",
+    "    around the mean, and take whichever value is lower. \n",
+    "    The fuel cost for each submarine is calculated by\n",
+    "    substracting the mean from its position and calculating\n",
+    "    the sum of the arithmetic sequence using Gauss' method.\n",
+    "    E.g. for position 16 if mean = 5:\n",
+    "    16 - 5 = 11\n",
+    "    cost = 11 * (11 + 1) // 2 = 66\n",
+    "    \"\"\"\n",
+    "    mean = np.mean(positions)\n",
+    "    cost = lambda x: x * (x+1) // 2\n",
+    "    c = sum(cost(abs(positions-np.ceil(mean))))\n",
+    "    f = sum(cost(abs(positions-np.floor(mean))))\n",
+    "    return int(min(c,f))\n",
+    "\n",
+    "day7_part2(test_positions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "99266250"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "day7_part2(final_positions)"
+   ]
   }
  ],
  "metadata": {
