Add solution to day 8

--- a/2021.ipynb
+++ b/2021.ipynb
@@ -1132,6 +1132,199 @@
    "source": [
     "day7_part2(final_positions)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Day 8: Seven Segment Search\n",
+    "\n",
+    "## Part 1\n",
+    "\n",
+    "The [seven-segment displays](https://en.wikipedia.org/wiki/Seven-segment_display) in the submarine are malfunctioning. \n",
+    "\n",
+    "Each digit of a seven-segment display is rendered by turning on or off any of seven segments named a through g:\n",
+    "\n",
+    "```python\n",
+    " 0:      1:      2:      3:      4:      5:      6:      7:      8:      9:\n",
+    " aaaa    ....    aaaa    aaaa    ....     aaaa    aaaa    aaaa    aaaa    aaaa\n",
+    "b    c  .    c  .    c  .    c  b    c   b    .  b    .  .    c  b    c  b    c\n",
+    "b    c  .    c  .    c  .    c  b    c   b    .  b    .  .    c  b    c  b    c\n",
+    " ....    ....    dddd    dddd    dddd     dddd    dddd    ....    dddd    dddd\n",
+    "e    f  .    f  e    .  .    f  .    f   .    f  e    f  .    f  e    f  .    f\n",
+    "e    f  .    f  e    .  .    f  .    f   .    f  e    f  .    f  e    f  .    f\n",
+    " gggg    ....    gggg    gggg    ....     gggg    gggg    ....    gggg    gggg\n",
+    "```\n",
+    "\n",
+    "The puzzle input is a series on entries. Each entry consists of ten unique signal patterns, a | delimiter, and finally the four digit output value. Because the digits 1, 4, 7, and 8 each use a unique number of segments, you should be able to tell which combinations of signals correspond to those digits.\n",
+    "\n",
+    "In the output values, how many times do digits 1, 4, 7, or 8 appear?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_segments = [\n",
+    "    \"be cfbegad cbdgef fgaecd cgeb fdcge agebfd fecdb fabcd edb | fdgacbe cefdb cefbgd gcbe\",\n",
+    "    \"edbfga begcd cbg gc gcadebf fbgde acbgfd abcde gfcbed gfec | fcgedb cgb dgebacf gc\",\n",
+    "    \"fgaebd cg bdaec gdafb agbcfd gdcbef bgcad gfac gcb cdgabef | cg cg fdcagb cbg\",\n",
+    "    \"fbegcd cbd adcefb dageb afcb bc aefdc ecdab fgdeca fcdbega | efabcd cedba gadfec cb\",\n",
+    "    \"aecbfdg fbg gf bafeg dbefa fcge gcbea fcaegb dgceab fcbdga | gecf egdcabf bgf bfgea\",\n",
+    "    \"fgeab ca afcebg bdacfeg cfaedg gcfdb baec bfadeg bafgc acf | gebdcfa ecba ca fadegcb\",\n",
+    "    \"dbcfg fgd bdegcaf fgec aegbdf ecdfab fbedc dacgb gdcebf gf | cefg dcbef fcge gbcadfe\",\n",
+    "    \"bdfegc cbegaf gecbf dfcage bdacg ed bedf ced adcbefg gebcd | ed bcgafe cdgba cbgef\",\n",
+    "    \"egadfb cdbfeg cegd fecab cgb gbdefca cg fgcdab egfdb bfceg | gbdfcae bgc cg cgb\",\n",
+    "    \"gcafb gcf dcaebfg ecagb gf abcdeg gaef cafbge fdbac fegbdc | fgae cfgab fg bagce\",\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "26"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def day8_part1(segments: list[str]):\n",
+    "    s = [seg.split(\" | \")[1] for seg in segments]\n",
+    "    s = [seg.split() for seg in s]\n",
+    "    count = 0\n",
+    "    for entry in s:\n",
+    "        for digit in entry:\n",
+    "            if len(digit) in (2,3,4,7):\n",
+    "                count += 1\n",
+    "    return count\n",
+    "\n",
+    "day8_part1(test_segments)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final_segments = file_to_list(\"inputs/input8.txt\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "349"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "day8_part1(final_segments)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Part 2\n",
+    "\n",
+    "Through a little deduction, you should now be able to determine the remaining digits.\n",
+    "\n",
+    "For each entry, determine all of the wire/segment connections and decode the four-digit output values. What do you get if you add up all of the output values?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "61229"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def day8_part2(segments: list[str]):\n",
+    "    sum = 0\n",
+    "    entries = [tuple(x.split() for x in seg.split(\" | \")) for seg in segments]\n",
+    "    for patterns, outputs in entries:\n",
+    "        value = \"\"\n",
+    "        # Map the digits with a unique lenght\n",
+    "        known = {}\n",
+    "        for pattern in patterns:\n",
+    "            match len(pattern):\n",
+    "                case 2: known[\"1\"] = pattern\n",
+    "                case 3: known[\"7\"] = pattern\n",
+    "                case 4: known[\"4\"] = pattern\n",
+    "                case 7: known[\"8\"] = pattern\n",
+    "        # Deduce the rest of the digits based on\n",
+    "        # the number of common segments with 1 and 4\n",
+    "        map = {}\n",
+    "        for pattern in patterns:\n",
+    "            sig = \"\".join(sorted(pattern))\n",
+    "            match len(sig), len(set(sig).intersection(known[\"1\"])), len(set(sig).intersection(known[\"4\"])):\n",
+    "                case 2, _, _ : map[sig] = \"1\"\n",
+    "                case 3, _, _ : map[sig] = \"7\"\n",
+    "                case 4, _, _ : map[sig] = \"4\"\n",
+    "                case 7, _, _ : map[sig] = \"8\"\n",
+    "                case 5, 1, 2 : map[sig] = \"2\"\n",
+    "                case 5, 1, 3 : map[sig] = \"5\"\n",
+    "                case 5, 2, 3 : map[sig] = \"3\"\n",
+    "                case 6, _, 4 : map[sig] = \"9\"\n",
+    "                case 6, 1, 3 : map[sig] = \"6\"\n",
+    "                case 6, 2, 3 : map[sig] = \"0\"\n",
+    "        for output in outputs:\n",
+    "            digit = map.get(\"\".join(sorted(output)))\n",
+    "            value += digit\n",
+    "        sum += int(value)\n",
+    "    return sum\n",
+    "\n",
+    "day8_part2(test_segments)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1070957"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "day8_part2(final_segments)"
+   ]
   }
  ],
  "metadata": {
@@ -1153,7 +1346,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.0"
   },
   "orig_nbformat": 4
  },
