Add solution to day 9

--- a/2021.ipynb
+++ b/2021.ipynb
@@ -1325,6 +1325,192 @@
    "source": [
     "day8_part2(final_segments)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Day 9: Smoke Basin\n",
+    "\n",
+    "### Part 1\n",
+    "\n",
+    "Smoke flows through the cave system. It flows to the lowest point of the area it's in.\n",
+    "\n",
+    "Low points are defined as the locations that are lower than any of their adjacent locations. Most locations have four adjacent locations (up, down, left, and right); locations on the edge or corner of the map have three or two adjacent locations, respectively. (Diagonal locations do not count as adjacent.)\n",
+    "\n",
+    "The risk level of a low point is 1 plus its height.\n",
+    "\n",
+    "Find all of the low points on your heightmap. What is the sum of the risk levels of all low points on your heightmap?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Heightmap: each point corresponds to the height of a particular location\n",
+    "test_grid = [\n",
+    "    [2,1,9,9,9,4,3,2,1,0],\n",
+    "    [3,9,8,7,8,9,4,9,2,1],\n",
+    "    [9,8,5,6,7,8,9,8,9,2],\n",
+    "    [8,7,6,7,8,9,6,7,8,9],\n",
+    "    [9,8,9,9,9,6,5,6,7,8]\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def day9_part1(grid: list[list]):\n",
+    "    sum = 0\n",
+    "    for x in range(len(grid)):\n",
+    "        for y in range(len(grid[0])):\n",
+    "            lowest = True\n",
+    "            coordinates = [(-1, 0), (0, 1), (1, 0), (0, -1)]\n",
+    "            for dx, dy in coordinates:\n",
+    "                if 0 <= x+dx < len(grid) and 0 <= y+dy < len(grid[0]):\n",
+    "                    if grid[x+dx][y+dy] <= grid[x][y]:\n",
+    "                        lowest = False\n",
+    "                if not lowest:\n",
+    "                    break\n",
+    "            if lowest:\n",
+    "                sum += grid[x][y] + 1\n",
+    "    return sum\n",
+    "\n",
+    "day9_part1(test_grid)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final_grid = [list(map(int, list(line))) for line in file_to_list(\"inputs/input9.txt\")]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "480"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "day9_part1(final_grid)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Part 2\n",
+    "\n",
+    "A basin is all locations that eventually flow downward to a single low point. Therefore, every low point has a basin, although some basins are very small. Locations of height 9 do not count as being in any basin, and all other locations will always be part of exactly one basin.\n",
+    "\n",
+    "The size of a basin is the number of locations within the basin, including the low point.\n",
+    "\n",
+    "What do you get if you multiply together the sizes of the three largest basins?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1134"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def bfs(grid: list[list], point: tuple):\n",
+    "    \"\"\"Breadth-first search\"\"\"\n",
+    "    queue = [point]\n",
+    "    visited = set()\n",
+    "    while queue:\n",
+    "        x, y = queue.pop(0)\n",
+    "        coordinates = [(-1, 0), (0, 1), (1, 0), (0, -1)]\n",
+    "        for dx, dy in coordinates:\n",
+    "            if 0 <= x+dx < len(grid) and 0 <= y+dy < len(grid[0]):\n",
+    "                n = (x+dx, y+dy)\n",
+    "                # Locations of height 9 mark the bassins' borders\n",
+    "                if n in visited or grid[x+dx][y+dy] == 9:\n",
+    "                    continue\n",
+    "                visited.add(n)\n",
+    "                queue.append(n)\n",
+    "    return len(visited)\n",
+    "\n",
+    "def day9_part2(grid: list[list]):\n",
+    "    basins = []\n",
+    "    for x in range(len(grid)):\n",
+    "        for y in range(len(grid[0])):\n",
+    "            lowest = True\n",
+    "            coordinates = [(-1, 0), (0, 1), (1, 0), (0, -1)]\n",
+    "            for dx, dy in coordinates:\n",
+    "                if 0 <= x+dx < len(grid) and 0 <= y+dy < len(grid[0]):\n",
+    "                    if grid[x+dx][y+dy] <= grid[x][y]:\n",
+    "                        lowest = False\n",
+    "                if not lowest:\n",
+    "                    break\n",
+    "            if lowest:\n",
+    "                bassin_size = bfs(grid, (x, y))\n",
+    "                basins.append(bassin_size)\n",
+    "    basins = sorted(basins)[-3:]\n",
+    "    return basins[0] * basins[1] * basins[2]\n",
+    "\n",
+    "day9_part2(test_grid)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1045660"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "day9_part2(final_grid)"
+   ]
   }
  ],
  "metadata": {
